# tips-and-notes

./: Cargo.toml  Prompte-template.md  README.md  eviction.md  get-ip.sh  ipvs.md  kube-config.md  minio-in-k8s.md  pdb.md  storageclass.md  table-on-mutip-tbs.md  tablespace.md  wal.md
awesome-sql/: index-for-null.md  testdata.sql
cnp/: backup-recovery-vs.md  code.yaml  issues.md
cnp/backup-recovery-barman/: README.md  bakup.yaml  sb.yaml  source-pg4k.yaml  source.yaml  target.yaml
cnp/backup-recovery-vs/: source-pg4k.yaml  source.yaml  target.yaml
minio/: README.md  deploy.yaml
others/: StatefulSetVSDeployment  cert.md  certmanager.md  cnp.md  delete-self-used-in-pod.md  df-vs-du.md  docker-build-arg.md  full_page_write.md  glcoud-docker.md  gpg.md  install_multiple_go-version.md  kube-config.md  kustomizeVSHelm  minio-in-k8s.md  pg-ldap.md  pg-wal-physical-logic.md  pg_controldata.md  pg_rewind.md  raft.md  raft2.md  rollout.md  soft-link-vs-hard-link.md
postgres/: Sequences.md  arch.md  checkpoint.md  conn_pool.md  controldata.md  ext.md  fsync.md  grant_usage.md  lag.md  ldap.md  pg_extension_setting.md  primary-standby.md  replication-slot.md  reserved_connection.md  rewind.md  shema_extension.md  tablespace.md  timeline.md  wal.md  wal_cleanup.md  wal_parameters.md
rust/: cargo.config.toml  cargo.md  command-pipeline.rs  completion.md  feature-on-different-version.md  resources.md
