[package]
name = "tips-and-notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.14.0", features = ["full"] }
kube = { version = "0.87.1", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
anyhow = "1.0.44"
tokio-util = "0.7.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

